--- a/OnAuth/OnAuth.csproj
+++ b/OnAuth/OnAuth.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.2.0" />
+    <PackageReference Include="System.DirectoryServices" Version="4.5.0-preview2-26406-04" />
     <PackageReference Include="System.Reactive.Linq" Version="3.1.1" />
+    <PackageReference Include="System.DirectoryServices.Protocols" Version="4.5.0-preview2-26406-04" />
   </ItemGroup>
 
 </Project>
