--- a/OnAuth.Ldap.Web/OnAuth.Ldap.Web.csproj
+++ b/OnAuth.Ldap.Web/OnAuth.Ldap.Web.csproj
@@ -7,6 +7,9 @@
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.7" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.0.0" />
   </ItemGroup>
 
   <ItemGroup>
